# Algorithmic-Programming---Part-One

./: BinaryExpression.h  CMakeLists.txt  Command.h  ConnectCommand.cpp  ConnectCommand.h  ConnectToServer.cpp  ConnectToServer.h  DataReaderServer.cpp  DataReaderServer.h  DefineVarCommand.cpp  DefineVarCommand.h  Divi.cpp  Divi.h  EqualsCommand.cpp  EqualsCommand.h  Expression.h  IfCommand.cpp  IfCommand.h  Interpreter.cpp  Interpreter.h  LoopCommand.cpp  LoopCommand.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Number.cpp  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  Plus.cpp  Plus.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  exitCommand.cpp  exitCommand.h  main.cpp
